fixed scrollbar

--- a/src/scss/partials/_media.scss
+++ b/src/scss/partials/_media.scss
@@ -110,6 +110,7 @@
     
     .main{
         width: 90%;
+        overflow-x: hidden;
         .main-slogan{
             height: 200px;
             font-size: 1.4rem;
@@ -142,8 +143,19 @@
             flex-direction: column;
             width: 100%;
         }
+        .main-about-left{
+            width: 100%;
+        }
+        .main-about-right{
+            width: 100%;
+            margin: 0;
+        }
     }
-   
+   .section-one-container{
+        .offer-wrapper{
+            flex-direction: column;
+        }
+   }
 }
   @media screen and (min-width: 701px) and (max-width: 899px) {
     .nav{
